--- a/TechnicalHWExample/TechnicalHWExample.csproj
+++ b/TechnicalHWExample/TechnicalHWExample.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Pet Meds Logo.png" />
     <Content Include="Web.config" />
     <Content Include="Vet.aspx" />
     <Content Include="CustomerService.aspx" />
