--- a/TechnicalHWExample/TechnicalHWExample.csproj
+++ b/TechnicalHWExample/TechnicalHWExample.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="messages.aspx" />
     <Content Include="Pet Meds Logo.png" />
     <Content Include="Web.config" />
     <Content Include="Vet.aspx" />
@@ -74,6 +75,13 @@
     <Content Include="Dispensing.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="messages.aspx.cs">
+      <DependentUpon>messages.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="messages.aspx.designer.cs">
+      <DependentUpon>messages.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
